--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "mysql": "^2.12.0",
+    "path": "^0.12.7",
+    "pug": "^2.0.0-beta6",
     "serve-favicon": "^2.3.0"
   }
 }
